--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,7 +6,6 @@
 .main {
   width: 100%;
   background: var(--color-bg);
-  overflow-x: hidden;
 }
 
 /* --- ANIMATIONS --- */
